# spare-parts-accounting

./: .env.example  .gitignore  README.md  main.py  pre_start.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py  dependencies.py  main_router.py  routers.py
app/config/: __init__.py  config.py  database.py
app/exceptions/: __init__.py  actual_product_exceptions.py  arrival_exceptions.py  auth_exceptions.py  base_exception.py  brand_exceptions.py  catalog_exceptions.py  employee_exceptions.py  shop_exceptions.py  supplier_exceptions.py
app/migrations/: env.py
app/models/: __init__.py  actual_product.py  base.py  catalog.py  contractor.py  employee.py  movement.py  new_arrival.py  order.py  payment_method.py  sale_receipt.py
app/repositories/: __init__.py  actual_product_repository.py  auth_repository.py  base_repository.py  brand_repository.py  catalog_repository.py  client_repository.py  employee_repository.py  margin_repository.py  new_arrival_repository.py  org_attr_repository.py  shop_repository.py  supplier_repository.py
app/schemas/: __init__.py  actual_product_schema.py  auth_schema.py  brand_schema.py  catalog_schema.py  client_schema.py  employee_schema.py  margin_schema.py  new_arrival_schema.py  role_schema.py  (+2 more)
config/: __init__.py  config.py  database.py
migrations/: env.py
models/: __init__.py  actual_product.py  base.py  basemodel.py  car.py  catalog.py  common.py  contractor.py  employee.py  movement.py  new_arrival.py  order.py  sale_receipt.py
tests/: conftest.py  create_data_for_tests.py  data_for_test.py
(+35 files in other folders)
